# birthday-greetings-python

./: .pylintrc  Makefile  README.md  pyproject.toml
resources/: employees.csv
src/birthday_greetings_python/: birthday_greeting_service.py  birthday_greetings.py  employee.py
src/birthday_greetings_python/domain/: Mailer.py  date.py  employee_repository.py  mail.py
src/birthday_greetings_python/domain/__tests__/: test_date.py  test_employee.py
src/birthday_greetings_python/infrastucture/: file_employee_repository.py  smtp_mailer.py
src/birthday_greetings_python/services/: birthday_greeting_service.py
tests/: mailhog.py  test_acceptance.py  test_birthday_greetings.py  test_date.py  test_employee.py
