[project]
name = "birthday-greetings-python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "iraticasi", email = "irati.casi@540deg.com"},
]
dependencies = []
requires-python = ">=3.8.0"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "pylint>=3.1.0",
    "pytest>=8.2.0",
    "requests>=2.31.0",
]
